# gl_cuda_simple_interop

./: .gitignore  CMakeLists.txt  README.md  compute.cu  compute.cuh  gl_vkpp.hpp  main.cpp
